test/runnable/extra-files/link14828stdio.d
module link14828stdio;

void writeln()(string s)
{
    int[4] sa;

    sa[s.length] = 1;
    // bounds check function (link14828stdio._array)
}
