test/fail_compilation/fail151.d
void main() {
    int length;
    int[4] data;

    data[length - 1] = 42;
}

